# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[package]
name = "boing"
version = "0.1.0"
authors = ["norepimorphism <norepi@protonmail.com>"]
edition = "2021"
description = "A safe, lightweight wrapper over libui-ng-sys"
repository = "https://github.com/norepimorphism/boing"
license = "MPL-2.0"
categories = ["api-bindings", "gui"]

[package.metadata.docs.rs]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
    "aarch64-apple-darwin",
]

[dependencies]
bumpalo = { version = "3.9", features = ["boxed"] }
libui-ng-sys = "0.4"
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = "0.3"
